--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </ul>
         </section>
 
-        <section class="scores">
+        <!-- <section class="scores">
           <table class="scores__table">
             <thead>
               <tr>
@@ -116,7 +116,7 @@
               
             </tbody>
           </table>
-        </section>
+        </section> -->
 
         <section class="weather">
           <span class="weather__location">Brighton, UK</span>
